--- a/html/resume.html
+++ b/html/resume.html
@@ -51,7 +51,7 @@
                 <li>4.0 GPA</li>
                 <li>Motivated second-year college student pursuing a Bachelor's degree in Accounting having developed a strong foundation in business skills.</li>
             </ul>
-        <li>Tabiona High School  / High School Diploma</li>
+        <br><li>Tabiona High School  / High School Diploma</li>
             <div style="text-indent: 20px;">AUGUST  2019 - MAY 2023,  TABIONA UTAH</div>
             <ul>
                 <li>4.0 GPA</li>
