--- a/html/resume.html
+++ b/html/resume.html
@@ -19,7 +19,7 @@
     <h3>Skills</h3>
     <ul>
         <li>Technical Skills: <br>Microsoft Office, Excel Automation, Tableau, Statistics in Excel, Solver, Web Development </li>
-        <li>Soft Skills: <br>Honesty, Active Listening, Flexibility, Reliability, Attentiveness</li>
+        <br><li>Soft Skills: <br>Honesty, Active Listening, Flexibility, Reliability, Attentiveness</li>
     </ul>
 
 
